# planet-earth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: docker-publish.yml
earth-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  instructions.md  pyproject.toml  run_migration.py  test.py
earth-backend/app/: main.py  run.py
earth-backend/app/api/: deps.py
earth-backend/app/api/v1/: management.py  schemas.py  search.py
earth-backend/app/core/: config.py  logging.py
earth-backend/app/db/: session.py
earth-backend/app/db/migrations/: env.py
earth-backend/app/db/migrations/versions/: 04456178c03b_new_migration.py  5aca8226e81d_new_migration.py  955730c1feec_new_migration.py  a0cf29e0d972_new_migration.py  e8df39d7f04b_new_migration.py
earth-backend/app/mcp_app/: __init__.py  mcp.py
earth-backend/app/models/: endpoint.py  schema.py
earth-backend/app/services/: embedder.py  parser.py  vector_store.py
earth-backend/app/tasks/: __init__.py  celery_app.py  endpoints.py  schemas.py
earth-backend/app/ui/: index.html
earth-backend/embedding_cache/: all-MiniLM-L6-v2_cache.joblib
earth-backend/openapis/: slack.yaml
earth-backend/tests/: test_parser.py
earth-charts/: Chart.yaml  values.yaml
earth-charts/templates/: _helpers.tpl  backend.yaml  celery.yaml  earth-mcp.yaml  postgres.yaml  redis.yaml
earth-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
earth-frontend/.roo/: mcp.json
earth-frontend/openapi/: getplanet-api.yaml
earth-frontend/src/: App.tsx  index.css
earth-frontend/src/components/: LoadingSpinner.tsx  Logo.tsx  MethodBadge.tsx  NoData.tsx  ProtectedRoute.tsx  RoleIndicator.tsx  ThemeToggle.tsx  UserAvatar.tsx
earth-frontend/src/components/cards/: DocumentCard.tsx  DocumentSearchResultCard.tsx  EndpointCard.tsx  EndpointSearchResultCard.tsx  SchemaCard.tsx  SearchResultCard.tsx  StatsCard.tsx
earth-frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  Header.tsx
earth-frontend/src/contexts/: AuthContext.tsx
earth-frontend/src/pages/: Auth.tsx  Dashboard.tsx  DocumentSearch.tsx  Documents.tsx  EndpointSearch.tsx  Endpoints.tsx  Index.tsx  NotFound.tsx  Schemas.tsx  Search.tsx
earth-frontend/src/services/: api.ts  auth.ts
earth-frontend/src/types/: models.ts
earth-mcp/: .gitignore  Dockerfile  README.md  index.ts  package-lock.json  package.json
earth-mcp/db/: client.ts  schema.ts
earth-service/: DOCUMENTS_MODEL_PLAN.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
earth-service/app/: main.py
earth-service/app/api/v1/: audit.py  documents.py  management.py  schemas.py  search.py
earth-service/app/core/: config.py
earth-service/app/db/: session.py
earth-service/app/db/migrations/: env.py
earth-service/app/db/migrations/versions/: 68b5647b37a7_new_migration.py
earth-service/app/models/: __init__.py  audit.py  base.py  documents.py  endpoint.py  schema.py
earth-service/app/services/: embedder.py  markdown_extractor.py  parser.py  postman_parser.py  text_chunker.py  vector_search.py  vector_store.py
earth-service/app/tasks/: __init__.py  celery_app.py  documents.py  endpoints.py  schemas.py
earth-service/app/ui/: index.html
earth-service/app/ui/assets/: index-BG8JrX9O.js  index-BOTHHgaP.css  index-BrolXXQK.js  index-C4xlUVve.js  index-CKAfUtBs.css  index-DHB75TcZ.css  index-DO9_0JRB.js  index-DTcHbnDy.js  index-DcWvY_xy.css
earth-service/init-scripts/: 01-init-db.sh
earth-service/openapis/: getplanet-api.yaml
earth-service/tests/: test_vector_search.py
